# plainscape

./: CMakeLists.txt  README.md
src/: Channel.cpp  Channel.h  Model.cpp  Model.h  TriangleFragmentShader.glsl  TriangleVertexShader.glsl  TriangleVertexShaderWithColor.glsl  VertexArray.cpp  VertexArray.h  main.cpp
